<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.fencingapp.android.fencingpoints.Maintwo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/fencing_logo"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/yellow_card"
                android:id="@+id/yellow_one"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/yellow_card"
                android:id="@+id/yellow_two"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/point_one"
                    style="@style/names"
                    android:textSize="60sp"
                    android:textColor="#fff"
                    android:text="@string/zero"/>

                <TextView
                    style="@style/names"
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:text="@string/coln"
                    android:textSize="35sp"/>
                <TextView
                    android:id="@+id/point_two"
                    style="@style/names"
                    android:textSize="60sp"
                    android:text="@string/zero"/>



            </LinearLayout>

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:textSize="60sp"
            android:layout_marginTop="16dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus_one_min"
                style="@style/time"
                android:text="1 min"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus_three_min"
                style="@style/time"
                android:text="3 min"
                android:padding="16dp"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start_timer"
            android:text="START"
            style="@style/time"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pause_timer"
            style="@style/time"
            android:text="PAUSE"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/point_for_one"
                        style="@style/point_button"
                        android:text="@string/point"/>

                    <Button
                        android:id="@+id/point_for_two"
                        style="@style/point_button"
                        android:text="@string/point"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/red_card"
                        android:id="@+id/red_for_one"/>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/yellow_card"
                        android:id="@+id/yellow_for_one"/>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/red_card"
                        android:id="@+id/red_for_two"
                        android:layout_marginLeft="100dp"/>

                    <ImageView
                        android:id="@+id/yellow_for_two"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/yellow_card"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/reset"
                        style="@style/reset"
                        android:text="@string/reset"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Priority"
                        android:id="@+id/priority"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

